rendered everything neatly on page

--- a/index.html
+++ b/index.html
@@ -13,25 +13,26 @@
       <div>
     <header id="header"/>
        <h4> Shop Maybelline </h4>
+       <!-- <img src="https://cdn.freebiesupply.com/logos/large/2x/maybelline-1-logo-svg-vector.svg" alt="Maybelline Logo" class='maybelline'> -->
           </div>
 <!--bar with shopping cart in the corner use .for id and #for class-->
-  <div>
-     <section id ="quantity-bar" class="quantity">
+  <div id='total-quantity-bar'>
+      <img src="https://www.iconpacks.net/icons/2/free-shopping-cart-icon-3045-thumb.png" alt="Free Shopping Cart Icon">
+</div>
 <ul>
-  <li><a href="#home">Home</a></li>
-  <li><a href="#news">News</a></li>
-  <li><a href="#contact">Contact</a></li>
-  <li><a href="#about">About</a></li>
+  <li><a href="#total">Total Price</a></li>
+  <li><a href="#clear-cart">Clear Cart</a></li>
 </ul>
        </div>
 <!--create the container for the JSON server to reach-->
     <div id="makeup-collection">
       <section id="makeup-cards">
       <h2>Pick Your Favorites</h2>
+      <div class="button">
+        <a href="#" class="myButton">grey</a>
+      </div>
       <!--create the grid for the makeup cards-->
       <div id="grid">
-      <div class="button">
-      </div>
       </div>
       </section>
     </div>
