--- a/index.html
+++ b/index.html
@@ -16,24 +16,18 @@
        <!-- <img src="https://cdn.freebiesupply.com/logos/large/2x/maybelline-1-logo-svg-vector.svg" alt="Maybelline Logo" class='maybelline'> -->
           </div>
 <!--bar with shopping cart in the corner use .for id and #for class-->
-  <div id='total-quantity-bar'>
-      <img src="https://www.iconpacks.net/icons/2/free-shopping-cart-icon-3045-thumb.png" alt="Free Shopping Cart Icon">
 </div>
 <ul>
   <li><a href="#total">Total Price</a></li>
   <li><a href="#clear-cart">Clear Cart</a></li>
 </ul>
-       </div>
-<!--create the container for the JSON server to reach-->
+<div id='total-quantity-bar'>
+      <img src="https://www.iconpacks.net/icons/2/free-shopping-cart-icon-3045-thumb.png" alt="Free Shopping Cart Icon">
+</div>
+<!--create the container for the JSON server to reach and cart-->
+<h2>Pick Your Favorites</h2>
     <div id="makeup-collection">
       <section id="makeup-cards">
-      <h2>Pick Your Favorites</h2>
-      <div class="button">
-        <a href="#" class="myButton">grey</a>
-      </div>
-      <!--create the grid for the makeup cards-->
-      <div id="grid">
-      </div>
       </section>
     </div>
     <script src="javascripts/index.js"></script>
