still not working... trying to get the cartto add up

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div>
     <header id="header"/>
        <h4> Shop Maybelline </h4>
-       <!-- <img src="https://cdn.freebiesupply.com/logos/large/2x/maybelline-1-logo-svg-vector.svg" alt="Maybelline Logo" class='maybelline'> -->
+       <img src="https://www.maybelline.com/~/media/mny/global/header/logo_v3.png" alt="Maybelline New York">
           </div>
 <!--bar with shopping cart in the corner use .for id and #for class-->
 </div>
@@ -25,7 +25,7 @@
   <div class="cart-total">
     <div class="cart-quantity"></div>
     <div class="cart-price"></div>
-    <strong class="cart-total-name">Total</strong>
+    <strong class="shoppingCart">Total</strong>
     <strong class="cart-total-price">$0</strong>
   </div> 
   <img src="https://www.iconpacks.net/icons/2/free-shopping-cart-icon-3045-thumb.png" alt="Free Shopping Cart Icon">
